<resources>
    <string name="app_name">LiveStock</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="browse">Browse</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_register">Register</string>
    <string name="fill_all">Fill in all fields</string>
    <string name="name">Name:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="enter_location">Enter your Location</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="title_activity_search">Search</string>
    <string name="livestock_type">LiveStock Type</string>
    <string name="breed_type">Breed Type</string>
    <string name="search">Search</string>
    <string name="choice_1">Choice 1</string>
    <string name="livestockbreed">Livestockbreed</string>
    <string name="livestock_breed">Livestock-Breed:</string>
    <string name="location">Location:</string>
    <string name="phone_no">Phone No:</string>
    <string name="cow_hereford">Cow-Hereford</string>
    <string name="langata">Langata</string>
    <string name="_0714135480">0714135480</string>
    <string name="description">Description...</string>
    <string name="price">Price (Kshs/=):</string>
    <string name="pricekshs">Price:</string>
    <string name="title_activity_advert_add">AdvertAdd</string>
    <string name="pick_livestock_type">Pick Livestock Type</string>
    <string name="pick_livestock_breed">Pick LiveStock Breed</string>
    <string name="enter_your_price">Enter your price</string>
    <string name="enter_short_description">Enter short description</string>
    <string name="action_profile">Profile</string>
    <string name="action_viewadds">View Adds</string>
    <string name="action_login">Login</string>
    <string name="title_activity_profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="number_of_own_adverts">Number of Own Adverts :</string>
    <string name="username">Username:</string>
    <string name="_3">3</string>
    <string name="AllUsers">All Users</string>
    <string name="title_activity_all_adds">AllAdds</string>
    <string name="posted_by">Posted By:</string>
    <string name="located">Located:</string>
    <string name="phone">Phone:</string>
    <string name="date_submitted">Date Submitted:</string>
    <string name="all_advertisements">All Advertisements</string>
    <string name="phonenumber">PhoneNumber:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="stock_breed">Stock/Breed:</string>
    <string name="pick_the_livestock_type">Pick the Livestock Type</string>
    <string name="type_the_location">Type the Location</string>
    <string name="breadcrumb"><![CDATA[>]]></string>
    <string name="search_results">Search Results</string>
    <string name="refresh_search">Refresh Search</string>
    <string name="home">Home</string>
    <string name="results_found">Results found:</string>
    <string name="skip_to_location">Skip to Location</string>
    <string name="own_adverts">Own Adverts</string>
    <string name="projectlogo">projectlogo</string>
    <string name="cancel_add">Cancel Add</string>
    <string name="add_livestock_type">Add Livestock Type</string>
    <string name="add_breed_type">Add Breed Type</string>
    <string name="re_enter_livestock">Re-enter Livestock</string>
    <string name="type_in_your_price_and_description">Type in your Price and Description</string>
    <string name="next">Next</string>
    <string name="re_enter_breed">Re-enter Breed</string>
    <string name="add_advert">Add Advert</string>
    <string name="take_a_picture_of_the_advert">Take a picture of the Advert</string>
    <string name="submit_advert">Submit Advert</string>
    <string name="take_picture">Take Picture</string>
    <string name="back">Back</string>
    <string name="enter_your_description_here">Enter your description here:</string>
    <string name="enter_the_price_here">Enter the price here:</string>
</resources>
