<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.probook.livestock.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="1"
        android:layout_weight="0.81"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView3"
            android:src="@drawable/livestock"
            android:contentDescription="@string/projectlogo" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/browse"
            android:id="@+id/btnbrowse"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="60dp"
            android:paddingRight="60dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnlogin"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="67dp"
            android:paddingRight="67dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/register"
                android:id="@+id/tvregister"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
